seperated clustering clode and started thesis bookdown

--- a/code/Rmarkdown/thesis/2-clustering-methods.Rmd
+++ b/code/Rmarkdown/thesis/2-clustering-methods.Rmd
@@ -1,40 +1,5 @@
----
-title: "Clustering-Analysis"
-author: "Dario Lepke"
-date: "27.1.2022"
-output:
-  html_document:
-    df_print: paged
-  pdf_document: default
----
+# Clustering Methods
 
-In this chapter we will first summarize the main ideas of clustering
-and then apply it to the precipitation data.
-If not indicated otherwise the information is taken
-from Elements of Statistical Learning.
-
-# Main Idea Clustering
-We can describe an object by a set of measurements or its similarity to other objects.
-Using this similarity we can put a collection of objects into subgroups or clusters.
-The objects in the subgroups should then be more
-similar to one another than to objects of different subgroups.
-This means inside the clusters we aim for homogeneity 
-and for observations of different clusters for heterogeneity.
-With the clustering analysis applied to the precipitation data we want to study if there are distinct groups (regions)
-apparent in the CAB. So that if we later apply the regression models we predict the precipitation for each group and not for the whole region.
-
-To explore the grouping in the data we need a measure
-of (dis)similarity. This measure is central and depends 
-on subject matter considerations.
-We construct the dissimilarities based on the measurements taken for each month.
-We interpret this as a multivariate analysis where,
-each month is one variable.
-So given the area in the CAB (resolution 5°x5°),
-we have 612 cells and 432 months, resulting in
-a $612 \times 432$ data matrix.
-we want to cluster cells into homogen groups.
-
-# Methods
 ## K-means
 In the following we briefly describe the K-means procedure.
 Beforehand we have to specify a number of clusters $C$ we believe exist in our data. Then we randomly initialize $C$ cluster centers in the feature space.
@@ -159,135 +124,3 @@ a high gap statistic.
 As Tibshirani et al. note and as it is also done in the used R function
 clusgap, doing a PCA on the data and compute the gap statistic on the
 PCA scores can improves the results of gap statistic.
-
-
-
-# Results
-## Kmeans without normalisation
-```{r}
-# kmeans_gap_b50 <- clusGap(getValues(precip), FUN = kmeans, nstart = 10,
-#                          K.max = 20, B = 50, iter.max = 30)
-(kmeans_gap_b50_plot <- readRDS("results/depr/clustering-depr/kmeans_gap_b50_plot.rds"))
-```
-
-We can see that the gap statistic increases with increasing number of clusters,
-so that there is no optimal k found.
-
-## Kmeans with normalisation, centering and scaling
-```{r}
-#norm_kmean_gap_b50 <- clusGap(scaled_precip, FUN = kmeans, B = 50, K.max = 20, nstart = 10,
-#                               iter.max = 30)
-(norm_kmean_gap_plot <- readRDS("results/depr/clustering/depr/norm_kmean_gap_b50_plot.rds"))
-```
-
-For the normalized data we get the same result
-
-
-
-## PAM/ Kmedoid, centered and scaled, swap
-```{r}
-(med_swap_gap_b50_plot <- readRDS("results/depr/clustering-depr/med_swap_gap_b50_plot.rds"))
-```
-
-The gap statistic also indicates no "best" k for the k-medoids approach.
-
-
-
-## PCA Sreeplot
-```{r}
-#(scree_plot_pca <- load("results/clustering/scree_plot_pca.jpg"))
-knitr::include_graphics("results/depr/clustering-depr/scree_plot.jpg")
-```
-
-The variance that is explained by the principal components indicates that, the
-3 principal components already explain a lot of the appearing variance in the data.
-We now study the gap statistic results for k-means and k-medoids after applying
-the PCA and choosing the number of principal components to be used.
-
-Following we compare the results of a gap statistic when the first 3, 4 and 5 
-principal components are used, for k-means and k-medoids respectively.
-
-## K-means after PCA
-
-```{r}
-(gap_km_3 <- readRDS("results/depr/clustering-depr/pc3_gap_plot.rds"))
-```
-```{r}
-(gap_km_4 <- readRDS("results/depr/clustering-depr/pc4_gap_plot.rds"))
-```
-```{r}
-(gap_km_5 <- readRDS("results/depr/clustering-depr/pc5_gap_plot.rds"))
-```
-
-The gap statistics run on the first 3 and 4 PC´s propose 3 as the best number
-of cluster to choose. For 5 PC´s we obtain k is 14.
-
-
-## K-medoids after PCA
-
-```{r}
-(pam_pca_3_plot <- readRDS("results/depr/clustering-depr/pam_pca_3_plot.rds"))
-```
-
-
-```{r}
-(pam_pca_4_plot <- readRDS("results/depr/clustering-depr/pam_pca_4_plot.rds"))
-```
-
-```{r}
-(pam_pca_5_plot <- readRDS("results/depr/clustering-depr/pam_pca_5_plot.rds"))
-
-```
-
-For k-medoids 3 as the optimal k only seems reasonable when the first 3 PC´s are used.
-For 4 and 5 PC´s we get 1 and 18 as best solution for k respectively.
-
-## Summary
-
-Without PCA we can´t find an optimal number of clusters when maximum number of clusters 
-is 20.
-When can apply a PCA on the data and use the three first principal components and 
-respective scores to do a cluster analysis. The results are mixed but seem to indicate
-three as a reasonable number of clusters.
-
-
-```{r}
-knitr::knit_exit()
-```
-# Preprocesing
-## Normalization (before and after PCA), Scaling?
-## PCA, number of columns from scores used
-## Outlier detection?
-
-
-
-
-## Gap statistic, number of B
-### Assumptions gap statistic
-## Comparison of different algorithms only for same parameters possible
-### same B, same number of score cols, standard yes/no
-
-# Preprocessing
-## Outlier detection? Outliers possible here?
-## Normalisation as 1st step 
-## PCA, number of score cols used
-## Normalisation after PCA
-
-# Describe Algorithm like
-We use different data pipelines for clustering.
-Preprocessing: normalization or PCA (screeplot for evaluation)
-Clustering: k-means or pm
-Evaluation: gap statistic 
-## Normalisation, Kmeans
-## PCA, kmeans
-## PCA, pam (param here)
-
-# questions
-Check rank of data or does the algorithm do it automatically?
-difference pca and factoranalysis
-
-# eventually 
-hierarchical clustering
-clustering on summary statistics, f.e seasonality, trend, etc
-
-
