--- a/thesis/index.Rmd
+++ b/thesis/index.Rmd
@@ -2,11 +2,13 @@
 title: "Predicting Droughts in the Amazon Basin based on Global Sea Surface Temperatures"
 author: "Dario Lepke"
 site: bookdown::bookdown_site
-documentclass: book
 output:
-  #html_document:
   bookdown::gitbook: default
-  #bookdown::pdf_book: default
+  bookdown::pdf_book: default
+bibliography: ref-lib.bib
+biblio-style: apalike
+link-citations: yes
+documentclass: book
 ---
 
 # Introduction {-}
